[Fountain pen] Fix issues with scrolling on small screens allowing for video visibility

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -438,10 +438,11 @@ body {
                         position: absolute;
                         left: calc(50px + #{$side-margin});
                         top: calc(50px + #{$header-height});
-                        height: calc(100vh - #{$header-height}*2);
+                        // height: calc(100vh - #{$header-height}*2);
                         display: flex;
                         flex-direction: column;
-                        justify-content: center;
+                        // justify-content: center;
+                        margin-top: 6vh;
                         width: 52%;
                         > p {
                             text-align: justify;
@@ -450,10 +451,17 @@ body {
                             margin-top: $content-padding;
                         }
                     }
-                    .videoContainer .background-video {
-                        height: 100vh;
-                        width: 100vw;
-                        object-position: top right;
+                    .videoContainer {
+                        position: absolute;
+                        z-index: 0;
+                        top: 0;
+                        right: 0;
+                        .background-video {
+                            height: 100%;
+                            // height: 100vh;
+                            width: 100vw;
+                            object-position: top right;
+                        }
                     }
                 }
                 &patio,
